# rBackup

./: .CMakeLists.txt.un~  .backupjob.cpp.un~  .gitignore  .mainwindow.cpp.un~  .mainwindow.h.un~  .manager.cpp.un~  CMakeLists.txt  README.md  backupjob.cpp  backupjob.h  compile_commands.json  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.h.autosave  mainwindow.ui  mainwindow.ui.autosave  manager.cpp  manager.h  utility.h
.cache/clangd/index/: backupjob.cpp.86C7C348471D4CDA.idx  backupjob.h.7CB906DECBA816E7.idx  main.cpp.129238203C9370A6.idx  mainwindow.cpp.43560C15102880E8.idx  mainwindow.h.3BA42C8FFF6BA6E8.idx  manager.cpp.78A3FACBC9E4F55B.idx  manager.h.E6806288FF6E70A8.idx  utility.h.8F5A127CD18B031F.idx
